get data from firestore

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
         "paths": {
             "components": ["./components/*"],
             "domains": ["./domains/*"],
-            "context": ["./context/*"]
+            "context": ["./context/*"],
+						"services": ["./services/*"]
         }
     }
 }
